kube/services/netpolicy/jh_netpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-jh
spec:
  podSelector:
    matchLabels:
      app: jupyter-hub
  ingress:
    - from:
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 3838
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-jh-nb
spec:
  podSelector:
    matchLabels:
      app: jupyterhub
  ingress:
    - from:
      - podSelector:
          matchLabels:
             app: jupyter-hub
      ports:
         - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
